--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,7 +16,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:ems="10"
-            android:hint="write the place name ..."
+            android:hint="Search for location"
+            android:fontFamily="@font/brandontextregular"
             android:textColorHint="@android:color/darker_gray"
             android:layout_alignParentLeft="true"
             android:inputType="textNoSuggestions" />
