--- a/app/src/main/res/layout/activity_signup_form.xml
+++ b/app/src/main/res/layout/activity_signup_form.xml
@@ -53,7 +53,7 @@
         android:layout_width="345dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:hint="Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
         android:layout_width="345dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:hint="Confirm Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,29 +89,39 @@
         app:layout_constraintTop_toBottomOf="@+id/eConfirmPass"
         app:layout_constraintVertical_bias="0.08" />
 
-    <RadioButton
-        android:id="@+id/radiobtn"
+    <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="172dp"
-        android:layout_marginRight="172dp"
-        android:hint="Male"
-        app:layout_constraintBottom_toTopOf="@+id/registerbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eConfirmPass"
-        app:layout_constraintVertical_bias="0.296" />
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toEndOf="@+id/gender"
+        app:layout_constraintTop_toBottomOf="@+id/eConfirmPass">
 
-    <RadioButton
-        android:id="@+id/radiobtn2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Female"
-        app:layout_constraintBottom_toTopOf="@+id/registerbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.149"
-        app:layout_constraintStart_toEndOf="@+id/radiobtn"
-        app:layout_constraintTop_toBottomOf="@+id/eConfirmPass"
-        app:layout_constraintVertical_bias="0.297" />
+        <RadioButton
+            android:id="@+id/radiobtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="172dp"
+            android:layout_marginRight="172dp"
+            android:hint="Male"
+            app:layout_constraintBottom_toTopOf="@+id/registerbtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/eConfirmPass"
+            app:layout_constraintVertical_bias="0.296" />
+
+        <RadioButton
+            android:id="@+id/radiobtn2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Female"
+            app:layout_constraintBottom_toTopOf="@+id/registerbtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.149"
+            app:layout_constraintStart_toEndOf="@+id/radiobtn"
+            app:layout_constraintTop_toBottomOf="@+id/eConfirmPass"
+            app:layout_constraintVertical_bias="0.297" />
+    </RadioGroup>
 
     <Button
         android:id="@+id/registerbtn"
