--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,6 +18,12 @@
         tools:layout="@layout/activity_message" />
 
     <fragment
+        android:id="@+id/navigation_events"
+        android:name="com.example.foodies.ui.event.EventsListFragment"
+        android:label="@string/events"
+        tools:layout="@layout/fragment_events_list" />
+
+    <fragment
         android:id="@+id/navigation_profile"
         android:name="com.example.foodies.ui.profile.ProfileFragment"
         android:label="@string/profile"
