--- a/app/src/main/res/layout/fragment_events_list_list.xml
+++ b/app/src/main/res/layout/fragment_events_list_list.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -21,3 +24,4 @@
         android:divider="#00000000"/>
 
 </RelativeLayout>
+</ScrollView>
